mark message as read
